<resources>
    <string name="app_name">코이지</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="show"><u>보기</u></string>
    <string name="news">새소식</string>
    <string name="title_alarm">알림</string>
    <string name="alarm">alarm</string>
    <string name="profile">profile</string>
    <string name="back">back</string>
    <string name="koizi">Koizi</string>
    <string name="my_page">마이페이지</string>
    <string name="show_my_info">내 정보 보기</string>
    <string name="my_info">내 정보</string>
    <string name="my_info_service">서비스 이용약관</string>
    <string name="delete_account">탈퇴하기</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="privacy_collection">개인정보 수집안내</string>
    <string name="nick_name">닉네임</string>
    <string name="notice">공지사항</string>
    <string name="shortcuts"><u>바로가기</u></string>
    <string name="app_setting">앱 설정</string>
    <string name="interior_progress">인테리어 진행상황</string>
    <string name="quick_test">간단안전검사 시작!</string>
    <string name="percent25">25%</string>
    <string name="percent50">50%</string>
    <string name="percent75">75%</string>
    <string name="percent100">100%</string>
    <string name="not_read">NotRead</string>
    <string name="number_input">-없이 숫자만 입력해주세요.</string>
    <string name="phone_number_input">-없이 휴대폰번호를 입력해주세요.</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="text_phone_number_input">회원정보에 등록된 휴대폰 번호를 입력해주세요.</string>
    <string name="forgot_id">아이디를 잊으셨나요?</string>
    <string name="receive_verification_number">인증번호 받기</string>
    <string name="text_id_input">아이디를 입력해주세요.</string>
    <string name="id">아이디</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="text_id_phone_number_input">회원정보에 등록된 아이디와 휴대폰 번호를 입력해주세요.</string>
    <string name="confirm"><b>확인</b></string>
    <string name="end"><b>완료</b></string>
    <string name="next"><b>다음</b></string>
    <string name="text_enter_phone_number"><b>본인인증을 위한\n휴대폰번호를 입력해주세요.</b></string>
    <string name="text_next_verification">다음을 누르시면,\n입력한 번호로 인증번호가 전송됩니다.</string>
    <string name="title_verification">본인인증</string>
    <string name="text_enter_verification"><b>인증번호를\n입력해주세요.</b></string>
    <string name="fail_verification">인증번호가 틀렸습니다.</string>
    <string name="login"><b>로그인</b></string>
    <string name="text_login"><b>로그인하기</b></string>
    <string name="text_id_save"><b>아이디 저장하기</b></string>
    <string name="text_stick">|</string>
    <string name="text_find_id">아이디 찾기</string>
    <string name="text_find_password">비밀번호 찾기</string>
    <string name="text_sign_in">회원가입</string>
    <string name="text_id">아이디</string>
    <string name="text_password">비밀번호</string>
    <string name="text_sns_login">SNS계정으로 로그인하기</string>
    <string name="text_found_id">아이디를 찾았어요.</string>
    <string name="text_id_asterisk_display">개인정보보호를 위해 아이디 중 일부는 *로 표기됩니다.</string>
    <string name="title_privacy_policy">개인정보처리방침</string>
    <string name="text_info_manage">내 정보 관리</string>
    <string name="text_phone_number">전화번호</string>
    <string name="text_password_reset">비밀번호 재설정</string>
    <string name="text_please_reset_password">비밀번호를 재설정해주세요.</string>
    <string name="text_please_input_password">비밀번호를 입력해주세요.</string>
    <string name="text_password_confirm">비밀번호 확인</string>
    <string name="text_password_one_more">비밀번호를 한번 더 입력해주세요.</string>
    <string name="text_safety">고객님의 안전을 진단하고 있어요</string>
    <string name="text_direct">직접 문의하고 싶으시다면</string>
    <string name="text_koizi_contact">코이지에게 문의하기</string>
    <string name="title_sign_up">회원가입</string>
    <string name="text_please_id_input">아이디를\n입력해주세요.</string>
    <string name="message_already">이미 존재하는 아이디입니다.</string>
    <string name="message_id_length">4자리 이상 입력해주세요.</string>
    <string name="message_available">사용가능한 아이디입니다.</string>
    <string name="text_password_input">비밀번호를\n입력해주세요.</string>
    <string name="text_password_type">6~12자리, 영문(대/소문자), 숫자, 특수문자 포함</string>
    <string name="text_password_limit">6~12자리, 영문(대/소문자), 숫자, 특수문자를 포함</string>
    <string name="message_password_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="title_register_profile">프로필 등록</string>
    <string name="text_register_profile"><b>프로필을 등록해주세요.</b></string>
    <string name="text_nick_name">닉네임을 입력해주세요.</string>
    <string name="title_terms_of_service">이용약관</string>
    <string name="check_required_years">[필수] 만 14세 이상입니다.</string>
    <string name="check_required_service">[필수] 서비스 이용약관</string>
    <string name="check_required_privacy">[필수] 개인정보 처리방침</string>
    <string name="check_optional_marketing">[선택] 마케팅 정보 수신동의</string>
    <string name="text_koizi_service_agree">코이지 서비스 이용약관에\n동의해주세요.</string>
    <string name="check_all_agree">모두 동의 (선택 정보 포함)</string>
    <string name="title_marketing">마켓팅 정보 수신동의</string>
    <string name="text_please_verification_input">인증번호를 입력해주세요.</string>
    <string name="text_verification_input">인증번호 입력</string>
    <string name="hint_verification">123456</string>
    <string name="contact_now"><b>바로 문의하기</b></string>
    <string name="contact_now_agree"><b>동의하고 문의하기</b></string>
    <string name="contact_history"><b>문의내역 확인하기</b></string>
    <string name="text_logout">로그아웃</string>
    <string name="q1"><b>Q1</b></string>
    <string name="q2"><b>Q2</b></string>
    <string name="q3"><b>Q3</b></string>
    <string name="q4"><b>Q4</b></string>
    <string name="q5"><b>Q5</b></string>
    <string name="message_id_upper_special">대문자/특수문자가 포함되어 있습니다.</string>
    <string name="error_message_connect">네트워크 연결 상태를 확인 후  다시 시도해주세요.</string>
    <string name="text_ask"><b>오늘도 코이지와\n행복하고 안전한 하루!</b></string>
    <string name="ask_title"><b>부모님을 위한 안전한 인테리어</b></string>
    <string name="ask_interior"><b>인테리어 문의하기</b></string>
    <string name="title_ask_interior"><b>인테리어 상담</b></string>
    <string name="title_quick_test"><b>간편상담이력</b></string>
    <string name="text_main_tip"><b>코이지의 인테리어 팁</b></string>
    <string name="text_only_last_10">최근 10개 항목만 표시됩니다.</string>
    <string name="text_no_interior_consulting"><b>등록된 인테리어 상담이 없습니다.</b></string>
    <string name="text_no_quick_test"><b>등록된 간편상담이 없습니다.</b></string>
    <string name="text_no_alarm"><b>등록된 알림이 없습니다.</b></string>
    <string name="text_no_notice"><b>등록된 공지사항이 없습니다.</b></string>
    <string name="text_no_progress"><b>등록된 시공이력이 없습니다.</b></string>
    <string name="date_sample">2023.03.01</string>
    <string name="title_sample">[공지] 코이지 새소식 입니다.</string>
    <string name="content_sample">이번 코이지는 새로운 어플을 출시하여 여러분들께 찾아뵙게되…</string>
    <string name="version_info">버전정보</string>
    <string name="version">v1.0</string>
    <string name="test_history">안전검사 리스트</string>
    <string name="test_start">간편안전 검사 시작</string>
    <string name="title_Q1"><b>특별히 아프신 곳이나 불편함이 있나요?</b></string>
    <string name="title_Q2"><b>집에서 제일 처음 들어서는 현관은 어떤가요?</b></string>
    <string name="title_Q3"><b>시간을 많이 보내는 거실에서의\n활동을 알려주세요!</b></string>
    <string name="title_Q4"><b>편안한 수면을 위한 곳\n침실에서의 행동을 알려주세요!</b></string>
    <string name="title_Q5"><b>집 안에서 가장 자주 방문하는\n화장실은 어떤가요?</b></string>
    <string name="Q1_text_1">자주 어지러워서 갑자기\n쓰러질까봐 걱정돼요</string>
    <string name="Q1_text_2">다른 사람의\n도움이 필요해요</string>
    <string name="Q1_text_3">자주 깜빡깜빡해요</string>
    <string name="Q1_text_4">아주 건강해요!</string>
    <string name="Q2_text_1">현관이 어두워서 발 밑이\n잘 안보여요"</string>
    <string name="Q2_text_2">현관에서 신발을 신고\n벗다가 넘어질 뻔 해요</string>
    <string name="Q2_text_3">현관 문턱이 높아\n발 끝이 자꾸 걸려요</string>
    <string name="Q2_text_4">현관을 드나들 때\n큰 문제가 없어요!</string>
    <string name="Q3_text_1">앉고 일어설 때\n힘이 들어요</string>
    <string name="Q3_text_2">움직일 때마다 가구에\n자주 부딪혀요</string>
    <string name="Q3_text_3">거실에서 다른 공간이\n보이지 않아요</string>
    <string name="Q3_text_4">항상 편안해요!</string>
    <string name="Q4_text_1">자다가 침대에서\n떨어진 적이 있어요</string>
    <string name="Q4_text_2">밤 중에 화장실에\n자주 가요</string>
    <string name="Q4_text_3">벽지가 화려해서 벽과의\n거리가 가늠되지 않아요</string>
    <string name="Q4_text_4">쿨쿨~\n잠을 아주 잘자요!</string>
    <string name="Q5_text_1">화장실 바닥이 미끄러워\n넘어질 뻔한 적이 있어요</string>
    <string name="Q5_text_2">용변 시 변기에 일어나고\n앉기가 힘들어요</string>
    <string name="Q5_text_3">욕조에 들어가고\n나오기가 어려워요</string>
    <string name="Q5_text_4">화장실 사용에\n큰 문제가 없어요!</string>
    <string name="title_answer25"><b>삐용삐용\n당신의 집에선\n안전사고가 날 수 있어요.</b></string>
    <string name="title_answer50"><b>잠시!\n더 늦기 전에 안전하게 바꾸세요.</b></string>
    <string name="title_answer75"><b>조금만 더 신경쓰면\n더욱 안전해질거에요!</b></string>
    <string name="title_answer100"><b>안전하게 내 집에서\n끝까지 지낼 수 있어요. :)</b></string>
    <string name="title_result"><b>검사결과</b></string>
    <string name="safety"><b>안전도 </b></string>
    <string name="safety25"><b> 0 ~ 25%</b></string>
    <string name="safety50"><b>26 ~ 50%</b></string>
    <string name="safety75"><b>51 ~ 75%</b></string>
    <string name="safety100"><b>76 ~ 100%</b></string>
    <string name="sample_test">반갑습니다!\n%s님의 집이 안전한지\n알아볼까요?</string>
    <string name="home_guide">집수리 안내서</string>
    <string name="supplies">복지용구</string>
    <string name="interior">인테리어</string>
    <string name="services">공사 서비스</string>
    <string name="title_test_result">검사결과</string>
    <string name="text_interior_history">인테리어 시공이력</string>
    <string name="title_interior_0">진행사항 없음</string>
    <string name="title_interior_25">25% 진행중…</string>
    <string name="title_interior_50">50% 진행중…</string>
    <string name="title_interior_75">75% 진행중…</string>
    <string name="title_interior_100">100% 진행중…</string>
    <string name="text_interior_0">안전인테리어를 기다리고 있어요</string>
    <string name="text_interior_25">고객님 안전을 진단하고 있어요</string>
    <string name="text_interior_50">시공이 진행되고 있어요</string>
    <string name="text_interior_75">마무리에 접어들고 있어요</string>
    <string name="text_interior_100">코이지 인테리어가 완료되었어요</string>
    <string name="cancel"><b>취소</b></string>
    <string name="yes"><b>예</b></string>
    <string name="delete"><b>정말 탈퇴하시겠습니까?</b></string>
    <string name="delete_message"><b>지금 탈퇴하시면 모든 콘텐츠와\n활동기록 등이 삭제됩니다.\n삭제된 정보는 복구할 수 없습니다.</b></string>
    <string name="logout"><b>로그아웃 하시겠습니까?</b></string>
    <string name="logout_message"><b>로그인화면으로 돌아갑니다.</b></string>
    <string name="save_test"><b>저장하시겠습니까?</b></string>
    <string name="save_test_message"><b>간편테스트 결과를 저장합니다.</b></string>
    <string name="save_ok"><b>저장하였습니다.</b></string>
    <string name="save_ok_message"><b>간편테스트 화면으로 돌아갑니다.</b></string>
    <string name="text_agree_collection">인테리어 정보 안내를 위한\n개인정보 수집이 있습니다.</string>
    <string name="text_agree_collection_text"> 이와 관련하여 아래와 같이 귀하의 개인정보를 수집 및 이용 내용을 개인정보보호법제 15조(개인정보의 수집 이용) 및 통계법 33조(비밀의 보호 등)에 의거하여 안내 드리니 확인하여 주시기 바랍니다.\n 서비스 정보 안내 및 상담, 홍보 마케팅을 위해 다음의 개인정보를 수집, 이용합니다.</string>
    <string name="text_push">푸시 알림</string>
    <string name="text_notice_reply">공지사항 및 답변알림</string>
    <string name="text_alarm_setting">알림설정</string>
    <string name="interior_title">우리 부모님의 안전한\n거주공간을 위한\n인테리어</string>
    <string name="sample_id">abc!***4</string>
    <string name="sample">123456</string>
    <string name="title_image">title_image</string>
    <string name="text_select_sex">성별을 먼저 선택해주세요:)</string>
    <string name="tell">tell</string>
    <string name="image">image</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="text_consulting_history">인테리어 상담내역</string>
    <string name="text_main_title_test">안전인테리어 간편검사</string>
    <string name="text_main_test">우리 부모님 집은 과연\n안전할까?</string>
</resources>