<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.PasswordResetActivity">

    <include layout="@layout/toolbar_back" android:id="@+id/toolbar_password_reset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password_reset"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_please_reset_password"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_password"
            android:textColor="@color/primary"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:ems="10"
            android:hint="@string/text_password_type"
            android:maxLength="12"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColorHint="@color/disabled"
            android:autofillHints="@string/text_password_type" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_password_confirm" />

        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:ems="10"
            android:maxLength="12"
            android:hint="@string/text_password_one_more"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:textColorHint="@color/disabled"
            android:autofillHints="@string/text_password_one_more" />

        <TextView
            android:id="@+id/tv_re_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <include layout="@layout/button_confirm" android:id="@+id/button_confirm" />
    </LinearLayout>

</LinearLayout>