<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.FindIdActivity">

    <include layout="@layout/toolbar_back" android:id="@+id/toolbar_find_id" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_id"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_number_input"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:hint="@string/number_input"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:padding="10dp"
            android:maxLength="11"
            android:textSize="15sp"
            android:textColorHint="@color/disabled"
            android:autofillHints="" />

        <include layout="@layout/button_receive" android:id="@+id/button_receive" />
    </LinearLayout>
</LinearLayout>