<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".login.FoundIdActivity">

    <include layout="@layout/toolbar_back" android:id="@+id/toolbar_found_id" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_found_id"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_verificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_asterisk_display"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_found_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sample_id"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/text_login"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/btn_find_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:text="@string/text_find_password"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>