<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.VerificationCodeActivity">

    <include layout="@layout/toolbar_back" android:id="@+id/toolbar_verification_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_please_verification_input"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_verification_input"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_verificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="6"
            android:padding="10dp"
            android:hint="@string/sample"
            android:textSize="16sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_fail_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fail_verification"
            android:textColor="@color/error"
            android:visibility="gone"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <include layout="@layout/button_confirm" android:id="@+id/button_confirm" />
    </LinearLayout>


</LinearLayout>